Actions
Bug #20747
closed[prism] regression in retry precedence
Bug #20747:
[prism] regression in retry precedence
ruby -v:
ruby 3.4.0dev (2024-09-15T01:06:11Z master 532af89e3b) +PRISM [arm64-darwin23]
Actions
Added by byroot (Jean Boussier) about 2 years ago. Updated about 2 years ago.
I have opened a PR to fix this: https://github.com/ruby/prism/pull/3073.