[PRISM] allow retry in BEGIN_ELSE node

Fixes [Bug #20747]